--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=spring-ai-milvus
 
 spring.ai.ollama.base-url=http://localhost:11434
 spring.ai.ollama.embedding.options.model=all-minilm:l6-v2
+
+zilliz.username=
+zilliz.password=
+zilliz.endpoint=
